@@ -1172,9 +1172,9 @@ book_layout = {
                 'fields': ['display_mode'],
                 'is_i18n': 1,
                 'label': 'book_display',
-                'label_edit': 'book_display',
-                'label_false': 'book_display_pages',
-                'label_true': 'book_display_flat',
+                'label_edit': 'cpsdoc_book_display',
+                'label_false': 'cpsdoc_book_display_pages',
+                'label_true': 'cpsdoc_book_display_flat',
             },
         },
     },
